--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset = "ISO-8859-1" />
-      <link href = "css/styles.css" rel = "stylesheet"/>
-      <title>Spring Boot Application</title>
-   </head>
-   <body>
-      <h4>Welcome to Employee Spring Boot web application</h4>
-   </body>
+
+	<head>
+		<meta charset="ISO-8859-1" />
+		<link href="css/styles.css" rel="stylesheet" />
+		<title>Spring Boot Application</title>
+	</head>
+
+	<body>
+		<h4>Welcome to Employee Spring Boot web application</h4>
+		<a href='/swagger-ui/'>Swagger UI docs</a>
+		<br>
+		<a href='/v2/api-docs'>Api Docs</a>
+	</body>
+
 </html>
