Added update employee screen and relavant changes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,8 @@
 		<a href='/swagger-ui/'>Swagger UI docs</a>
 		<br>
 		<a href='/v2/api-docs'>Api Docs</a>
+		<br>
+		<a href='/home'>Goto Website</a>
 	</body>
 
 </html>
